# pyvista-wasm

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  codecov.yml  index.html  package-lock.json  package.json  pyproject.toml  renovate.json  tox.ini  xo.config.js
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  user_story.yml
.github/workflows/: api-coverage.yml  check-vtk-wasm-update.yml  conventional-commits.yml  deploy-jupyterlite.yml  deploy-redirect.yml  deploy-slides.yml  markdownlint.yml  mirror-vtk-wasm.yml  nightly.yml  preview-slides.yml  pyodide.yml  release-please.yml  test.yml  update-marimo-preview.yml  update-preview.yml  update-stlite-preview.yml  uv-lock.yml
badges/: coverage.json
docs/: Makefile  conf.py  index.md
docs/_static/: custom.css
docs/api/: index.md
docs/decisions/: .markdownlint.yml  0000-use-markdown-architectural-decision-records.md  0001-use-slidev-for-pycon-jp-2026-talk-slides.md  0002-decide-slide-preview-and-deployment-strategy.md  README.md  adr-template-bare.md  adr-template-minimal.md  adr-template.md  index.md
docs/explanation/: index.md
docs/howtos/: index.md
jupyterlite/content/: intro.py
marimo/: intro.py
pr-preview/pr-317/: _redirects  index.html
pr-preview/pr-317/assets/: SlideWrapper-B7q2Wmo4.js  index-B7SZ55nm.js  useDrawings-BIWy2sKE.js
pr-preview/pr-317/assets/slidev/: 404-P6NkeRkX.js  DrawingControls-pkEBihZB.js  DrawingLayer-DLKYRvP2.js  NoteDisplay-CQ-B5Ffy.js  NoteEditable-D4SGiyqM.js  TimerBar-BzwJIZjD.js  md-_jwMBfCB.js  notes-DF8DmfmH.js  notes-edit-Bk4lJhJG.js  overview-DsBj6Sp9.js  play-CByQAPFw.js  presenter-B_O5-7YP.js  shortcuts-DtlKdLf6.js  useNav-CLrDXTfr.js
pr-preview/pr-322/: 404.html  _redirects  index.html
pr-preview/pr-322/assets/: SlideWrapper-1P-gKpKv.js  SlideWrapper-DQDqChsa.js  SlideWrapper-wDNlIWif.js  index-D4N5fNks.js  index-DXKoVDUa.css  index-De3wCZQK.js  index-VykqIKtR.js  useDrawings-CGsIpQsD.js  useDrawings-D5UyKPgx.js  useDrawings-iy9S5SGR.js
pr-preview/pr-322/assets/slidev/: 404-Bjotljo3.js  404-CnpiVZeH.js  404-PsCXAty_.js  DrawingControls-1jOpS-a6.js  DrawingControls-BoEHPNTu.js  DrawingControls-D_3UhCU9.js  DrawingLayer-C-ACOY-y.js  DrawingLayer-C_b08ylX.js  DrawingLayer-CsGPxD11.js  NoteDisplay-Bi8x2rKX.js  NoteDisplay-Dx24lNnE.js  NoteDisplay-_X96wuzm.js  NoteEditable-CoHST9N3.js  NoteEditable-Di7rD4x0.js  NoteEditable-DtO49V9F.js  TimerBar-CVToweOM.js  TimerBar-CXQqPOa2.js  TimerBar-D_-zyTK7.js  md-DiGk8lrf.js  md-DnyYzDHz.js  md-XlEldmf9.js  notes-BIYKmVEl.js  notes-DvSMrB2I.js  notes-edit-BvXebzkh.js  notes-edit-D9WwDy2l.js  notes-edit-DpOkXVd9.js  notes-nTYohVVG.js  overview-ClyxGaBb.js  overview-N0YhsmS4.js  overview-iwmK4B9v.js  play-DMz7IQMo.js  play-DTrlgglZ.js  play-DbxnSTWd.js  presenter-BZJ4W7Cm.js  presenter-Dxg_IezS.js  presenter-g-oQvj2K.js  shortcuts-BTecl8_d.js  shortcuts-CYYMIKzF.js  useNav-BH0ArBRq.js  (+3 more)
pr-preview/pr-325/: _redirects  index.html
pr-preview/pr-325/assets/: SlideWrapper-CW0d3ffe.js  index-CAB_s8TY.js  useDrawings-DNujbCyr.js
pr-preview/pr-328/: 404.html  _redirects
pr-preview/pr-328/assets/: SlideWrapper-BaGRwPNV.js  index-BrP6rv3T.css  index-Cri0CS8e.js  useDrawings-Dj7_mAGG.js
pr-preview/pr-330/: 404.html  _redirects
pr-preview/pr-330/assets/: SlideWrapper-BLelogZX.js  SlideWrapper-CXiXwQ8S.js  index-CelrM8kG.js  index-HSmaqOWD.js  index-fogz5Na8.css  md-B44JEEu8.js  md-CELAavwT.js  useDrawings-Bqzj9uYB.js  useDrawings-CEYG3ZIQ.js
pr-preview/pr-341/: _redirects  index.html
pr-preview/pr-341/assets/: SlideWrapper-LuDU3WK9.js  index-DBJM_C7t.js  md-8mD7NfW2.js  md-BnSxwU1l.js  useDrawings-0HHZyWSg.js
slides/: _redirects  index.html  package-lock.json  package.json  slides.md
slides/assets/: SlideWrapper-BB87z1tR.js  SlideWrapper-DZGiez6d.js  SlideWrapper-GutF34XH.js  SlideWrapper-w16CSpNk.js  index-3ei1BPON.js  index-BwI1JhMU.css  index-CI1kA8SN.css  index-CRvVMFT4.js  index-CnJ0II26.css  index-DeuLzL6w.js  index-mHjYnrnN.js  md-BfBkAzcV.js  useDrawings-0ENNpWAG.js  useDrawings-D5ALxeJM.js  useDrawings-DE6nPpay.js  useDrawings-DbgGRjGE.js
slides/assets/slidev/: 404-BEqh1EuL.js  404-CQSDNMwW.js  404-D5RtCF8y.js  404-V9oaFQth.js  DrawingControls-BcxvtpGQ.js  DrawingControls-DvNFj2yL.js  DrawingControls-GYNzCOcc.js  DrawingControls-uXrXIH23.js  DrawingLayer-BPcrxs4C.js  DrawingLayer-D6rvwDY_.js  DrawingLayer-G5Msx7H9.js  DrawingLayer-iEZXGWhh.js  NoteDisplay-9KWK-m-t.js  NoteDisplay-BAJptOsY.js  NoteDisplay-D8Z_cfo5.js  NoteDisplay-wxOw03D8.js  NoteEditable-BVyzDA0I.js  NoteEditable-Cn2L_Qko.js  NoteEditable-DLNO524w.js  NoteEditable-DyOABqtz.js  TimerBar-BATW1rsk.js  TimerBar-Ba3P0YZ2.js  TimerBar-CIpJ1ZHA.js  TimerBar-hF4w1tpp.js  md-BCqJcR0E.js  md-CFG0p9UU.js  notes-BuvLE2mB.js  notes-CLnyk2_o.js  notes-DXzJATOl.js  notes-UeTNm5dC.js  notes-edit--do-XvS_.js  notes-edit-DIGs_nCO.js  notes-edit-hOpnrjGW.js  notes-edit-woRGK5Hs.js  overview-BJ_P5tmk.js  overview-CithV90t.js  overview-D3lBy5X2.js  overview-DvgtYR81.js  play-Bfc2RdX5.js  play-BoYvgkf0.js  (+15 more)
slides/public/: pyvista-demo.html
src/pyvista_wasm/: __init__.py  __init__.pyi  __main__.py  _capture.py  _cli.py  camera.py  examples.py  light.py  mesh.py  plotter.py  readers.py  rendering.py  streamlit_integration.py  text.py  texture.py
src/pyvista_wasm/templates/: renderer.html  renderer.js  standalone.html  streamlit.html
tests/: conftest.py  test_browser_rendering.py  test_camera.py  test_cli.py  test_init.py  test_light.py  test_mesh.py  test_plotter.py  test_pyodide.py  test_readers.py  test_rendering.py  test_scalar_arrays.py  test_scalar_integration.py  test_text.py  test_texture.py
tests/data/: triangle.gltf  triangle.ply  triangle.stl  triangle.vtk
ts/: renderer.ts  tsconfig.json  vtk.d.ts
ts/src/: App.tsx
ts/src/components/: LoadingOverlay.tsx  PyvistaCanvas.tsx
(+72 files in other folders)
