[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-build-scripts", "hatchling" ]

[project]
name = "pyvista-wasm"
version = "0.1.0"
description = "PyVista-like API for VTK.wasm"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Tetsuo Koyama", email = "contact@tetsuo-koyama.dev" },
]
# SPEC 0 — Minimum Supported Dependencies
# https://scientific-python.org/specs/spec-0000/
#
# This project follows SPEC 0 for determining the minimum supported versions:
# - Python: Drop support 36 months after initial release
# - Core dependencies: Drop support 24 months after initial release
#
# As of 2026-03-25:
# - Minimum Python: 3.12 (released 2023-10-02)
# - Minimum NumPy: 2.0 (released 2024-06-16)
#
# SPEC 1 — Lazy Loading of Submodules and Functions
# https://scientific-python.org/specs/spec-0001/
#
# This project follows SPEC 1 for lazy loading of submodules and functions
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "jinja2>=3",
  "lazy-loader>=0.4",
  "numpy>=2",
  "typer>=0.9",
]
optional-dependencies.dev = [
  "mypy>=1",
  "pre-commit>=3",
  "pytest>=7",
  "ruff>=0.1",
  "tox>=4",
]
optional-dependencies.streamlit = [
  "streamlit>=1.30",
]
urls.Documentation = "https://github.com/tkoyama010/pyvista-wasm"
urls.Homepage = "https://github.com/tkoyama010/pyvista-wasm"
urls.Issues = "https://github.com/tkoyama010/pyvista-wasm/issues"
urls.Repository = "https://github.com/tkoyama010/pyvista-wasm"
scripts.pyvista-wasm = "pyvista_wasm._cli:cli_main"

[dependency-groups]
dev = [
  "mypy>=1",
  "pre-commit>=3",
  "ruff>=0.1",
  "tox>=4",
  { include-group = "test" },
]
test = [
  "pillow>=9",
  "playwright>=1.40",
  "pytest>=7",
  "pytest-playwright>=0.4",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/pyvista_wasm" ]
build.artifacts = [ "src/pyvista_wasm/templates/renderer.js" ]
build.hooks.build-scripts.scripts = [
  { commands = [ "npm ci", "npm run build" ], artifacts = [ "src/pyvista_wasm/templates/renderer.js" ] }
]

[tool.ruff]
line-length = 100
lint.select = [ "ALL" ]
lint.per-file-ignores."tests/*" = [
  "ANN",     # missing type annotations - not critical for tests
  "INP001",  # implicit namespace package
  "PLR2004", # magic values - normal for test data
  "S101",    # assert - normal for pytest
  "SLF001",  # private member access - testing private APIs
]
lint.flake8-pytest-style.parametrize-names-type = "tuple"
lint.flake8-pytest-style.parametrize-values-row-type = "tuple"
lint.flake8-pytest-style.parametrize-values-type = "list"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
disallow_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = [ "src/pyvista_wasm/__init__\\.pyi" ]
overrides = [ { module = "tests.*", disallow_untyped_defs = false, check_untyped_defs = false } ]

[tool.pytest]
ini_options.minversion = "6.0"
ini_options.testpaths = [ "tests" ]
ini_options.log_level = "INFO"
ini_options.log_cli_level = "INFO"
ini_options.xfail_strict = true
ini_options.addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--import-mode=importlib",
]
ini_options.filterwarnings = [
  "error",
]
ini_options.markers = [
  "playwright: marks tests that use Playwright for browser automation (deselect with '-m \"not playwright\"')",
]
