[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-build-scripts", "hatchling" ]

[project]
name = "pyvista-wasm"
version = "0.2.0"
description = "PyVista-like API for VTK.wasm"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Tetsuo Koyama", email = "contact@tetsuo-koyama.dev" },
]
# SPEC 0 — Minimum Supported Dependencies
# https://scientific-python.org/specs/spec-0000/
#
# This project follows SPEC 0 for determining the minimum supported versions:
# - Python: Drop support 36 months after initial release
# - Core dependencies: Drop support 24 months after initial release
#
# As of 2026-03-25:
# - Minimum Python: 3.12 (released 2023-10-02)
# - Minimum NumPy: 2.0 (released 2024-06-16)
#
# SPEC 1 — Lazy Loading of Submodules and Functions
# https://scientific-python.org/specs/spec-0001/
#
# This project follows SPEC 1 for lazy loading of submodules and functions
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "jinja2>=3.1.0,<3.2.0",
  "lazy-loader>=0.4.0,<0.6.0",
  "numpy>=2.0.0,<2.5.0",
  "typer>=0.9.0,<0.25.0",
]
optional-dependencies.dev = [
  "mypy>=1.0.0,<1.16.0",
  "pre-commit>=3.0.0,<4.0.0",
  "pytest>=7.0.0,<8.4.0",
  "ruff>=0.1.0,<0.16.0",
  "tox>=4.0.0,<4.24.0",
]
optional-dependencies.docs = [
  "jupyterlite-pyodide-kernel==0.7.1; python_version>='3.12' and python_version<'3.14'",
  "jupyterlite-sphinx==0.22.1; python_version>='3.12' and python_version<'3.14'",
  "myst-parser>=4.0.0,<5.0.0; python_version>='3.12'",
  "sphinx>=8.0.0,<9.0.0; python_version>='3.12'",
  "sphinx-book-theme>=1.1.0,<1.2.0; python_version>='3.12'",
  "sphinx-design>=0.6.0,<0.7.0; python_version>='3.12'",
  "sphinx-intl>=2.2.0,<2.4.0; python_version>='3.12'",
]
optional-dependencies.streamlit = [
  "streamlit>=1.30.0,<1.42.0",
]
urls.Documentation = "https://github.com/tkoyama010/pyvista-wasm"
urls.Homepage = "https://github.com/tkoyama010/pyvista-wasm"
urls.Issues = "https://github.com/tkoyama010/pyvista-wasm/issues"
urls.Repository = "https://github.com/tkoyama010/pyvista-wasm"
scripts.pyvista-wasm = "pyvista_wasm._cli:cli_main"

[dependency-groups]
dev = [
  "mypy>=1.0.0,<1.16.0",
  "pre-commit>=3.0.0,<4.0.0",
  "ruff>=0.1.0,<0.16.0",
  "tox>=4.0.0,<4.24.0",
  { include-group = "test" },
]
test = [
  "pillow>=9.0.0,<11.0.0",
  "playwright>=1.40.0,<1.50.0",
  "pytest>=7.0.0,<8.4.0",
  "pytest-playwright>=0.4.0,<0.7.0",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/pyvista_wasm" ]
build.artifacts = [ "src/pyvista_wasm/templates/renderer.js" ]
build.hooks.build-scripts.scripts = [
  { commands = [ "npm ci", "npm run build" ], artifacts = [ "src/pyvista_wasm/templates/renderer.js" ] }
]

[tool.ruff]
line-length = 100
lint.select = [ "ALL" ]
lint.per-file-ignores."jupyterlite/content/*" = [
  "D100",    # missing docstring - jupytext files
  "E402",    # module import not at top - cell-based structure
  "ERA001",  # commented-out code - jupytext metadata
  "F704",    # await outside async - top-level await valid in Pyodide
  "INP001",  # implicit namespace package
  "PLE1142", # await outside async - top-level await valid in Pyodide
]
lint.per-file-ignores."tests/*" = [
  "ANN",     # missing type annotations - not critical for tests
  "INP001",  # implicit namespace package
  "PLR2004", # magic values - normal for test data
  "S101",    # assert - normal for pytest
  "SLF001",  # private member access - testing private APIs
]
lint.flake8-pytest-style.parametrize-names-type = "tuple"
lint.flake8-pytest-style.parametrize-values-row-type = "tuple"
lint.flake8-pytest-style.parametrize-values-type = "list"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
disallow_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = [ "src/pyvista_wasm/__init__\\.pyi" ]
overrides = [ { module = "tests.*", disallow_untyped_defs = false, check_untyped_defs = false } ]

[tool.pytest]
ini_options.minversion = "6.0"
ini_options.testpaths = [ "tests" ]
ini_options.log_level = "INFO"
ini_options.log_cli_level = "INFO"
ini_options.xfail_strict = true
ini_options.addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--import-mode=importlib",
]
ini_options.filterwarnings = [
  "error",
]
ini_options.markers = [
  "playwright: marks tests that use Playwright for browser automation (deselect with '-m \"not playwright\"')",
]
